@@ -290,16 +290,7 @@ class KorgeExtension(val project: Project) {
     var icon: File? = project.projectDir["icon.png"]
     var banner: File? = project.projectDir["banner.png"]
 
-    var javaAddOpens: List<String> = ArrayList<String>().apply {
-        add("--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED")
-        add("--add-opens=java.desktop/java.awt=ALL-UNNAMED")
-        add("--add-opens=java.desktop/sun.awt=ALL-UNNAMED")
-        if (isMacos) {
-            add("--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED")
-            add("--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-        }
-        if (isLinux) add("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
-    }
+    var javaAddOpens: List<String> = JvmAddOpens.createAddOpens().toMutableList()
 
 	var gameCategory: GameCategory? = null
 
